# ros1-avp

./: .gitignore  README_SIM.md  update-ade-for-avp.sh
docker/: Dockerfile.base  atomic_configure_file.cmake  build-base.sh  run-ppavp-sd.sh
docker/px2-crossbuild-autoware-ppavp/: Dockerfile.kinetic-crossbuild  Dockerfile.kinetic-crossbuild-driveworks  README.md  build_cross_image.sh  catkin_make_release_cross  cross_toolchain_driveworks.cmake
ros/src/localisation_mapping/gazebo_fake_localization/: CMakeLists.txt  package.xml
ros/src/localisation_mapping/gazebo_fake_localization/include/: groundtruth_tf.h
ros/src/localisation_mapping/gazebo_fake_localization/nodes/: groundtruth_tf.cpp  groundtruth_tf_publisher.cpp
ros/src/localisation_mapping/ndt_localization/: CMakeLists.txt  README.md  package.xml
ros/src/localisation_mapping/ndt_localization/launch/: carpark_mapping.launch
ros/src/localisation_mapping/ndt_localization/params/: my_base_imu.yaml
ros/src/msgs/sd_control_msgs/: package.xml
ros/src/msgs/sd_control_msgs/msg/: Control.msg
ros/src/msgs/sdcan_interface_msgs/: CMakeLists.txt  package.xml
ros/src/msgs/sdcan_interface_msgs/msg/: StreetDroneControl1.msg
ros/src/navigation/autoware_glue/: CMakeLists.txt  README.md  package.xml
ros/src/navigation/autoware_glue/launch/: waypoint_loader_sim.launch  waypoint_loader_sim_demo.launch
ros/src/navigation/autoware_glue/maps/: emptymap.yml  mcity_path_1m_3.csv  park_mcity_path_03m.csv  park_mcity_path_1m.csv  summon_mcity_path_03m.csv  summon_mcity_path_1m.csv
ros/src/navigation/autoware_glue/nodes/: lane_waypoints_loader.py  lane_waypoints_loader_avp.py  track_waypoints.py
ros/src/navigation/kinematics_to_control/: CMakeLists.txt  package.xml
ros/src/navigation/kinematics_to_control/include/: kinematics_vehicle_pid.h
ros/src/navigation/kinematics_to_control/launch/: mpc_to_control.launch
ros/src/navigation/kinematics_to_control/nodes/: kinematics_vehicle_pid.cpp
ros/src/navigation/twist_to_control/: CMakeLists.txt  README.md  package.xml
ros/src/navigation/twist_to_control/config/: my_xbox.config.yaml
ros/src/navigation/twist_to_control/include/: dbw_pid.h
ros/src/navigation/twist_to_control/launch/: twist_to_pid_pp.launch  twist_velocity_base_vehicle.launch
ros/src/navigation/twist_to_control/nodes/: dbw_pid.cpp  twist_vehicle_mapper.cpp  twist_vehicle_pid.cpp  twist_velocity_base.cpp
ros/src/navigation/twist_to_control/srv/: brake.srv
ros/src/navigation/waypoint_follower_extend/: CMakeLists.txt  package.xml
ros/src/navigation/waypoint_follower_extend/launch/: mpc_follower.launch
ros/src/navigation/waypoint_follower_extend/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros/src/navigation/waypoint_follower_extend/launch/log/: latest_build
ros/src/navigation/waypoint_follower_extend/nodes/mpc_follower/: mpc_follower_core.cpp  mpc_trajectory.cpp  mpc_waypoints_converter.cpp
ros/src/safety/lidar_alarm/: CMakeLists.txt  package.xml
ros/src/safety/lidar_alarm/launch/: lidar_costmap_alarm.launch
ros/src/safety/lidar_alarm/nodes/: lidar_alarm.py
ros/src/safety/us_alarm/: CMakeLists.txt  package.xml
ros/src/safety/us_alarm/launch/: us_alarm.launch
ros/src/safety/us_alarm/nodes/: us_alarm.py
ros/src/simulation/prius/car_demo/: CMakeLists.txt
ros/src/simulation/prius/car_demo/launch/: test_gazebo.launch  test_urdf.launch
ros/src/simulation/prius/car_demo/nodes/: control_translator  key_teleop_translator
ros/src/simulation/prius/car_demo/plugins/: PriusHybridPlugin.cc  gazebo_ros_block_laser.cpp
ros/src/simulation/prius/car_demo/rviz/: demo.rviz
ros/src/simulation/prius/prius_description/urdf/: axle.xacro  body.xacro  camera.gazebo  camera.xacro  laser.gazebo  laser.xacro  sonar.gazebo  sonar.xacro  steering.xacro  vehicle.gazebo  vehicle.xacro  vehicle_gazebo.xacro  wheel.gazebo  wheel.xacro
ros/src/simulation/sim_bringup/: CMakeLists.txt  package.xml
ros/src/simulation/sim_bringup/launch/mpc/: prius_wploader_mpc_pid_mcity_avp_demo.launch  prius_wploader_mpc_pid_mcity_parking.launch  prius_wploader_mpc_pid_mcity_summon.launch
ros/src/simulation/sim_bringup/launch/pursuit/: prius_global_planner_pursuit_pid.launch  prius_wploader_pursuit_pid_mcity.launch  prius_wploader_pursuit_pid_mcity_avp_demo.launch  prius_wploader_pursuit_pid_mcity_parking.launch  prius_wploader_pursuit_pid_mcity_summon.launch
ros/src/simulation/sim_bringup/params/: ekf_map.yaml  ekf_odom.yaml
ros/src/simulation/sim_bringup/rviz/: sim_demo.rviz  sim_demo_prius.rviz  sim_op_planner.rviz
ros/src/simulation/sim_bringup/urdf/: pp_twizy.urdf.xacro
ros/src/simulation/streetdrone/twizzy_description/: CMakeLists.txt  package.xml
ros/src/simulation/streetdrone/twizzy_description/launch/: sd1_twizzy.launch
ros/src/simulation/streetdrone/twizzy_description/urdf/: gmsl.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro  materials.urdf.xacro  sd1_twizzy.xacro  twizzy.urdf.xacro  velodyne.urdf.xacro  wheel.urdf.xacro
ros/src/ui/rqt_plugin_cpp/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
ros/src/ui/rqt_plugin_cpp/include/rqt_plugin_cpp/: my_plugin.h  ros_interface.h
ros/src/ui/rqt_plugin_cpp/launch/: carpark_mapping.launch  data_record.launch
ros/src/ui/rqt_plugin_cpp/resources/: avp-demo.perspective
ros/src/ui/rqt_plugin_cpp/resources/app/: PPAVP-Datacapture.desktop
ros/src/ui/rqt_plugin_cpp/resources/scripts/: carpark_mapping_launch.sh  data_record_launch.sh
ros/src/ui/rqt_plugin_cpp/src/rqt_plugin_cpp/: my_plugin.cpp  my_plugin.ui  ros_interface.cpp
ros/src/util/WaypointGeneration/: park_mcity_base_pose_ground_truth.csv  park_mcity_path_03m.csv  park_mcity_path_1m.csv  summon_mcity_base_pose_ground_truth.csv  summon_mcity_path_03m.csv  summon_mcity_path_1m.csv  wp_generation.py
ros/src/visualization/costmap_plot/: CMakeLists.txt  costmap.rviz  package.xml
ros/src/visualization/costmap_plot/nodes/: costmap_plot.py
