<?xml version="1.0"?>
<package>
  <name>gazebo_fake_localisation</name>
  <version>1.8.0</version>
  <description>
      This package convertains a ros node that read in /base_pose_ground_truth from gazebo to publish
      a tf frame in /map and /base_link (parent and child frame in the message)
  </description>

  <maintainer email="punnu@parkopedia.com">PunnuPhairatt</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export></export>
</package>
