<?xml version="1.0"?>
<package format="2">
  <name>ndt_localization</name>
  <version>0.0.0</version>
  <description>The ndt_localization package for launching Autoware ndt localization</description>
  <maintainer email="punnu@Parkopedia.com">Punnu Phairatt</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
