<?xml version="1.0"?>
<package format="2">
  <name>sd_control_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages to control the StreetDrone</description>

  <maintainer email="sgvandijk@gmail.com">Sander van Dijk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
