<?xml version="1.0"?>
<package>
  <name>kinematics_to_control</name>
  <version>1.8.0</version>
  <description>
    Control velocity and Steering command 
  </description>

  <maintainer email="punnu@parkopedia.com">PunnuPhairatt</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export></export>
</package>
