<?xml version="1.0"?>
<package>
  <name>twist_to_control</name>
  <version>1.8.0</version>
  <description>
      This package convertains a ros node that linearly map a twist message to accelation(throttle/torque) and steering.
      It is useful for controlling a car wih a joy stick publishing linear and angular velocity (twist message)
  </description>

  <maintainer email="punnu@parkopedia.com">PunnuPhairatt</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>tf</build_depend>
   <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
