<package format="2">
  <name>us_alarm</name>
  <version>1.0.0</version>
  <description>
  This package provides ultra sound alarm capability to detect obstructions.
  This can be used to signal dbw interface to stop a vehicle
  </description>
  <maintainer email="adrian.bedford@parkopedia.com">Adrian Bedford</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
</package>
