<?xml version="1.0"?>
<package>
  <name>rqt_plugin_cpp</name>
  <version>0.0.0</version>
  <description>The rqt_plugin_cpp package</description>
  <maintainer email="punnu@parkopedia.com">Punnu Phairatt</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rqt/Tutorials/Writing%20a%20C%2B%2B%20Plugin</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
