<?xml version="1.0"?>
<package format="2">
	<name>twizzy_description</name>
	<version>0.0.0</version>
	<description>ppavp_twizzy urdf and gazebo simulation</description>
	<maintainer email="punnu@parkopedia.com">Punnu Phairatt</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>

	</export>
</package>
